--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "이 재료로 모해먹지?",
   "main": "index.js",
   "scripts": {
-   "start": "json-server --watch db.json --port 3000"
+    "start": "json-server --watch db.json --port 5000"
   },
   "repository": {
     "type": "git",
@@ -18,5 +18,6 @@
   "homepage": "https://github.com/Jeong-seyoung/EMO#readme",
   "devDependencies": {
     "json-server": "^0.16.3"
-  }
+  },
+  "keywords": []
 }
